@@ -1,21 +1,0 @@
-PlayerName:
-  general:
-    level: 0
-    exp: 0
-  attribute:
-    strength: 0
-    dexterity: 0
-    vitality: 0
-    wisdom: 0
-    luck: 0
-  secondary:
-    health: 0
-    max_health: 0
-    mana: 0
-    max_mana: 0
-    armor: 0
-    melee_damage: 0
-    ranged_damage: 0
-    attack_speed: 0
-    move_speed: 0
-    critial_chance: 0
